<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barnacle</string>
    <string name="map_title">Track Drive</string>
    <string name="manage_title">Manage Routes</string>
    <string name="post_title">Create Route</string>
    <string name="confirm_title">Confirm Arrival</string>
    <string name="share_title">Share Route</string>
    
    <string name="app_id">540602052657989</string>
    <string name="imgFooterDesc">Footer Image</string>
    <string name="imgLogoDesc">Logo Image</string>
        
    <string name="title_page_detail">Barnacle Page</string>    

    <string name="invite_email_hint">Enter an Email</string>
    <string name="invite_phone_hint">or a Phone Number</string>
    <string name="pick_email_label">Browse Contact List</string>
    <string name="add_label">Add</string>
    <string name="name_head">Selected Contacts</string>
    <string name="sms_head">SMS</string>
    <string name="eml_head">Email</string>
    <string name="share_btn">Submit</string>
    <string name="share_head">Share Your Route</string>
    <string name="share_fb">Post on Facebook</string>
    
    <string name="dateSliderTitle">Selected date</string>    
</resources>