<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout  
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"  
	    android:layout_width="match_parent">  
    	<EditText 
	        android:layout_height="wrap_content"  
	        android:hint="@string/invite_email_hint"  
	        android:id="@+id/invite_email"   
	        android:inputType="textEmailAddress"
	        android:layout_width="wrap_content"></EditText>
	    <Button  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"    
	        android:text="@string/add_label"  
	        android:layout_alignParentRight="true"  
	        android:onClick="addEmailContact"></Button>      	
	</LinearLayout>    	
	<LinearLayout  
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"  
	    android:layout_width="match_parent">  
	    <EditText 
	        android:layout_height="wrap_content"  
	        android:hint="@string/invite_phone_hint"  
	        android:id="@+id/invite_phone"   
	        android:inputType="phone"
	        android:layout_width="wrap_content"></EditText>
	    <Button  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"    
	        android:text="@string/add_label"  
	        android:layout_alignParentRight="true"  
	        android:onClick="addPhoneContact"></Button> 
	    <Button  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:id="@+id/do_email_picker"  
	        android:text="@string/pick_email_label"  
	        android:layout_alignParentRight="true"  
	        android:onClick="doLaunchContactPicker"></Button>  
	</LinearLayout>

<LinearLayout 
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    android:orientation="vertical" 
    android:id="@+id/contact_list">
    <LinearLayout 
        android:layout_width="fill_parent"  
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        <TextView
			android:layout_weight="4"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/name_head"></TextView>
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/sms_head"></TextView>
		<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/eml_head"></TextView>                    
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
	    <CheckBox
	        android:id="@+id/fb_checkbox"
	        android:checked="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/share_fb" />
        <Button
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="shareMsg"
            android:padding="8dp"
            android:text="@string/share_btn" />

    </LinearLayout>

</LinearLayout>
